# datalog

./: .gitignore  Doxyfile  LICENSE  README.md  build.sh  clean.sh  kb.pl  meson.build  test.sh
src/: ast.cpp  ast.hh  atom.cpp  datalog.cpp  datalog.hh  eatom.cpp  erule.cpp  eterm.cpp  interpreter.cpp  interpreter.hh  lexer.cpp  lexer.hh  main.cpp  parse_error.cpp  parser.cpp  parser.hh  program.cpp  rule.cpp  term.cpp
subprojects/: snitch.wrap
tests/: kb1.pl  meson.build  query0.pl  query1.pl  test.cpp  ut0.cpp
